[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "satprocess"
version = "0.1.0"
description = "Astronomical image calibration pipeline"
readme = "README.md"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Finlay Davis", email = "finlayjdavis@gmail.com"}
]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.20",
    "matplotlib>=3.4",
    "astropy>=5.0",
    "scipy>=1.7",
    "scikit-image>=0.18",
]